# mlops-feature-store

./: .gitignore  Dockerfile  README.md  commit_msg.txt  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
docs/executed/: 03_data_quality_and_leakage_checks.html
notebooks/: 01_offline_feature_generation.ipynb  02_training_with_features.ipynb  03_data_quality_and_leakage_checks.ipynb
registry/: feature_views.yaml
registry/offline/: features_daily.csv
scripts/: bootstrap.sql  demo_ingest.py
src/feature_store_api/: cli.py  main.py
src/feature_store_api/api/routes/: __init__.py  features.py  offline.py  registry.py
src/feature_store_api/core/: config.py  db.py  redis_client.py
src/feature_store_api/feature_store/: ingest.py  materialize.py  models.py  offline.py  online.py  registry.py  strategies.py
src/feature_store_api/monitoring/: metrics.py
src/feature_store_api/quality/: README.md  __init__.py  psi.py  report.py  schema.py
src/feature_store_api/streaming/: consumer.py
tests/: conftest.py  test_health.py  test_materialize_sqlite.py  test_quality_report.py  test_registry_reload.py
