[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlops-feature-store"
version = "0.1.0"
description = "Feast-like feature store reference implementation (FastAPI + Postgres + Redis)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Olivier Robert-Duboille" }]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "pyyaml>=6.0",
  "sqlalchemy>=2.0",
  "asyncpg>=0.29",
  "redis>=5.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
]

quality = [
  "pandas>=2.1,<3.0",
  "numpy>=1.26,<2.0",
  "pyarrow>=15.0",
]

[project.scripts]
mfs = "feature_store_api.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/feature_store_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
